implemented per set specific options and rendering ui (basic boolean) based on those flags

--- a/fontsampler-admin.css
+++ b/fontsampler-admin.css
@@ -22,3 +22,6 @@
 #fontsampler-admin .error {
   color: red;
 }
+#fontsampler-admin .fontsampler-options-checkbox label > span {
+  display: inline-block;
+}
