--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -12,7 +12,7 @@
         padding: 1em;
     }
 
-
+ 
     .info, .notice, .error {
         display: block;
     }
@@ -24,5 +24,12 @@
     }
     .error {
         color: red;
+    }
+
+    // wrapper with label > span + input[type=checkbox]
+    .fontsampler-options-checkbox {
+        label > span {
+            display: inline-block;
+        }
     }
 }
