--- a/fontsampler-interface.less
+++ b/fontsampler-interface.less
@@ -40,7 +40,8 @@
 
 		select[name="font-selector"],
 		select[name="sample-text"] {
-			width: 40%;
+			margin-right: 2%;
+			width: 38%;
 		}
 		select[name="alignment"] {
 			width: 10%;
