render empty or warning if typeset or font not found

--- a/fontsampler-interface.less
+++ b/fontsampler-interface.less
@@ -51,11 +51,12 @@
 		}
 	}
 
+	// the actual container of the type sample
 	.fontsampler {
 	    border: 1px solid;
 	    clear: both;
 	    margin-top: 1em;
-	    padding: 0.5em;
+	    padding: 0.5em 0.75em;
 		transition: all 0.2s ease-out;
 
 		&.invert {
