--- a/fontsampler-interface.css
+++ b/fontsampler-interface.css
@@ -44,7 +44,7 @@
   border: 1px solid;
   clear: both;
   margin-top: 1em;
-  padding: 0.5em;
+  padding: 0.5em 0.75em;
   transition: all 0.2s ease-out;
 }
 .fontsampler-wrapper .fontsampler.invert {
