--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -37,12 +37,25 @@
         padding: 1em;
     }
 
+    code {
+        border: 1px solid #ddd;
+    }
+
     code, .filename {
         font-family: monospace;
         background: white;
-        border: 1px solid #ddd;
         padding: 0.2em 0.5em;
         font-size: smaller;
+    }
+
+    td .fileformat {
+        display: inline-block;
+        width: 4em;
+    }
+
+    p.submit {
+        margin: 0;
+        padding: 0;
     }
 
  
