--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -14,6 +14,7 @@
         border-collapse: collapse;
         border-spacing: 0;
         width: 100%;
+        margin: 1em auto 2em;
     }
 
     table, thead, tbody, tr, th, td {
@@ -23,6 +24,10 @@
 
     th, td {
         padding: 0.25em 0.5em;
+    }
+
+    td {
+        border-bottom: 1px solid #eee;
     }
 
     th {
