uninstall hook, misc admin UI improvement, fixed some rendering frontend issues

--- a/fontsampler-admin.css
+++ b/fontsampler-admin.css
@@ -22,7 +22,7 @@
 #fontsampler-admin th,
 #fontsampler-admin td {
   text-align: left;
-  vertical-align: top;
+  vertical-align: middle;
 }
 #fontsampler-admin th,
 #fontsampler-admin td {
