--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -19,7 +19,7 @@
 
     table, thead, tbody, tr, th, td {
         text-align: left;
-        vertical-align: top;
+        vertical-align: middle;
     }
 
     th, td {
