--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -8,6 +8,16 @@
 
     label {
         display: block;
+        font-family: monospace;
+        color: #999;
+        margin: 1em 0;
+
+        &:hover, &:focus {
+            input, select {
+                background: #eee;
+                border: 1px solid #333;
+            }
+        }
     }
 
     table {
@@ -34,6 +44,17 @@
         border-bottom: 2px solid #aaa;
         font-weight: normal;
         font-size: larger;
+        vertical-align: top;
+    }
+
+    p {
+        font-size: inherit;
+        max-width: 40em;
+    }
+
+    small {
+        font-size: x-small;
+        line-height: 1em;
     }
 
     // block at the top for displaying messages
@@ -79,28 +100,34 @@
     }
 
     #fontsampler-menu {
-        border-bottom: 1px solid;
-        margin: 0;
-        padding: 0 1em;
-
-        li {
-            padding: 0;
+        ul {
+            border-bottom: 1px solid #eee;
             margin: 0;
-            font-size: larger;
-            display: inline-block;
-            border: 1px solid;
-            border-bottom: 0;
+            padding: 0 1em;
 
-            a {
+            li {
+                padding: 0;
+                margin: 0;
+                font-size: larger;
                 display: inline-block;
-                padding: 0.5em 1em;
-                text-decoration: none;
-            }
+                border-bottom: 0;
 
-            &.current {
-                background: grey;
                 a {
-                    color: white;
+                    display: inline-block;
+                    padding: 0.5em 1em;
+                    text-decoration: none;
+                    outline: none;
+
+                    &:hover, &:focus {
+                        background: #dde9ff;
+                    }
+                }
+
+                &.current {
+                    background: #eee;
+                    a {
+                        color: #333;
+                    }
                 }
             }
         }
