--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -2,9 +2,15 @@
  * Scope all css to be contained only within the fontsampler wrapper
  */
 #fontsampler-admin {
-    margin: 20px 20px 20px 0;
-    padding: 2em;
-    background: white;
+
+    padding-top: 1em;
+
+    header,
+    main {
+        background: white;
+        margin: 0 1.5em 0 0;
+        padding: 1em 1.5em;
+    }
 
     label {
         display: block;
@@ -84,6 +90,19 @@
         padding: 0;
     }
 
+    footer {
+        margin: 1.5em 1.5em 0 0;
+        padding: 1em 1.5em 0.5em; 
+        background: white;
+        ul {
+            overflow: auto;
+        }
+        li {
+            display: inline-block;
+            float: left;
+            margin-right: 1em;
+        }
+    }
  
     // different default type of messages in a <strong>
     .info, .note, .error {
