--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -9,7 +9,7 @@
     main {
         background: white;
         margin: 0 1.5em 0 0;
-        padding: 1em 1.5em;
+        padding: 1em 2em;
     }
 
     label {
@@ -92,7 +92,7 @@
 
     footer {
         margin: 1.5em 1.5em 0 0;
-        padding: 1em 1.5em 0.5em; 
+        padding: 1em 2em 0.5em; 
         background: white;
         ul {
             overflow: auto;
@@ -116,6 +116,11 @@
     }
     .error {
         color: red;
+    }    
+
+    ul.real-list {
+        list-style: disc;
+        margin: 0 0 0 2em;
     }
 
     #fontsampler-menu {
