--- a/fontsampler-interface.css
+++ b/fontsampler-interface.css
@@ -9,8 +9,8 @@
   width: 100%;
 }
 .selectric {
-  border: 0 solid #fff;
-  background: #fff;
+  border: 0 solid #ffffff;
+  background: #ffffff;
   position: relative;
   border-radius: 0;
 }
@@ -22,12 +22,12 @@
   margin: 0 30px 0 0;
   font-size: inherit;
   line-height: 30px;
-  color: #333;
+  color: #333333;
   height: 30px;
   border-bottom: 1px solid #333;
 }
 .selectric .button {
-  background: #fff;
+  background: #ffffff;
   border-radius: 0;
   border-bottom: 1px solid #333;
   display: block;
@@ -38,7 +38,7 @@
   margin: auto;
   width: 30px;
   height: 30px;
-  color: #333;
+  color: #333333;
   text-align: center;
   font: 0/0 a;
   *font: 1px Lucida Sans Unicode, Arial Unicode MS, Arial;
@@ -54,24 +54,24 @@
   width: 0;
   height: 0;
   border: 4px solid transparent;
-  border-top-color: #333;
+  border-top-color: #333333;
   border-bottom: none;
 }
 .selectric-hover .selectric {
-  border-color: #333;
+  border-color: #333333;
 }
 .selectric-hover .selectric .button {
-  color: #333;
+  color: #333333;
 }
 .selectric-hover .selectric .button:after {
-  border-top-color: #333;
+  border-top-color: #333333;
 }
 .selectric-open {
   z-index: 9999;
 }
 .selectric-open .selectric {
-  border-color: #333;
-  background: #fff;
+  border-color: #333333;
+  background: #ffffff;
 }
 .selectric-open .selectric-items {
   display: block;
@@ -264,6 +264,26 @@
 .fontsampler-wrapper .fontsampler-interface .fontsampler-interface-row:after {
   clear: both;
   content: '';
+  display: block;
+  width: 100%;
+}
+.fontsampler-wrapper .fontsampler-interface button.fontsampler-toggle {
+  height: 30px;
+  width: 30px;
+  padding: 0;
+  border-radius: 3px;
+  overflow: hidden;
+  outline: none;
+  opacity: 0.75;
+  transition: opacity 0.2s ease-in-out;
+}
+.fontsampler-wrapper .fontsampler-interface button.fontsampler-toggle.fontsampler-toggle-on {
+  opacity: 1;
+}
+.fontsampler-wrapper .fontsampler-interface button.fontsampler-toggle img {
+  font-size: 12px;
+  line-height: 10px;
+  float: left;
   display: block;
   width: 100%;
 }
