--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -193,4 +193,29 @@
         margin-right: 5%;
         width: 45%;
     }
+
+    .form-settings label {
+        clear: both;
+        span {
+            float: left;
+            display: inline-block;
+            width: 20em;
+        }
+        div.slider {
+            display: inline-block;
+            width: 20em;
+        }
+        code {
+            margin: 0 1em;
+        }
+        input[type="range"] {
+            width: 20em;
+        }
+        input, textarea {
+
+        }
+        small {
+            display: block;
+        }
+    }
 }
