initial attempt to make UI sorting frontend interface to admin backend

--- a/fontsampler-admin.css
+++ b/fontsampler-admin.css
@@ -265,3 +265,28 @@
 #fontsampler-admin .form-settings label small {
   display: block;
 }
+#fontsampler-admin ul.fontsampler-ui-preview-list {
+  border: 1px solid #ccc;
+  background: #ddd;
+  min-height: 4em;
+  margin: 5px 0;
+  width: 40em;
+}
+#fontsampler-admin ul.fontsampler-ui-preview-list li {
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  background: #eee;
+  cursor: pointer;
+  float: left;
+  padding: 5px 10px;
+  text-align: center;
+  margin-right: 3%;
+  width: 30%;
+}
+#fontsampler-admin ul.fontsampler-ui-preview-list li.fontsampler-ui-placeholder-full {
+  width: 100%;
+}
+#fontsampler-admin ul.fontsampler-ui-preview-list .ui-state-highlight {
+  background: transparent;
+  border: 1px dotted orange;
+}
